# DPU.DT

./: .gitignore  README.md
DT000 อบรมปรับพื้นฐาน/: A001.txt  A002.html  A002.txt  A004.html  A005.html  A006.html  A007.html  A008.html  A009.html  B001.html  style.css
DT503 การพัฒนาแอปพลิเคชันบนอุปกรณ์พกพา/Final Project/: package_bk.json
DT503 การพัฒนาแอปพลิเคชันบนอุปกรณ์พกพา/HTML+BootStrap_ Exercise1/: Readme.md
DT503 การพัฒนาแอปพลิเคชันบนอุปกรณ์พกพา/HTML+BootStrap_ Exercise2/: Readme.md
DT503 การพัฒนาแอปพลิเคชันบนอุปกรณ์พกพา/HTML+jQuery_ Exercise1/: index.html
DT503 การพัฒนาแอปพลิเคชันบนอุปกรณ์พกพา/HTML+jQuery_ Exercise2/: Readme.md
DT503 การพัฒนาแอปพลิเคชันบนอุปกรณ์พกพา/Responsive-Web/: character.html  spell.html  test.html
DT503 การพัฒนาแอปพลิเคชันบนอุปกรณ์พกพา/Responsive-Web-wat/: Readme.md  page3.html
DT503 การพัฒนาแอปพลิเคชันบนอุปกรณ์พกพา/Week01/: B003.php
DT503 การพัฒนาแอปพลิเคชันบนอุปกรณ์พกพา/Week04/: WE652-403.html  WE652-406.html  WE652-407.html  WE652-408.html  WE652-410.html
DT508 MachineLearning/: README.md
DT508 MachineLearning/final_project/face-attendance/: README.md  database.py  face_utils.py  main.py  pyproject.toml
DT508 MachineLearning/final_project/face-attendance/database/: attendance.db
DT508 MachineLearning/final_project/face-attendance/faces/: ds_model_vggface_detector_retinaface_aligned_normalization_base_expand_0.pkl
DT508 MachineLearning/final_project/face-attendance/static/: script.js
DT508 MachineLearning/final_project/face-attendance/templates/: index.html
detect-car/: detect.py
(+171 files in other folders)
