[project]
name = "face-attendance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepface>=0.0.100",
    "flask>=3.1.3",
    "mtcnn>=1.0.0",
    "numpy>=2.4.6",
    "opencv-python>=5.0.0.93",
    "pillow>=12.3.0",
    "tensorflow>=2.21.0",
    "tf-keras>=2.21.0",
]
